# mullama

./: Cargo.toml  README.md  build.rs  install.sh
configs/: deepseek-r1.toml  gemma3.toml  llama3.toml  qwen3.toml  qwq.toml
configs/modelfiles/: deepseek-r1-7b.modelfile  gemma2-9b.modelfile  llama3.2-1b.modelfile  llama3.2-3b.modelfile  llava-7b.modelfile  mistral-7b.modelfile  phi3-mini.modelfile  qwen2.5-7b.modelfile
docs/: FEATURES.md  GETTING_STARTED.md  MIGRATION_FROM_OLLAMA.md
documentation/: mkdocs.yml
documentation/docs/: index.md
documentation/docs/daemon/: deployment.md
examples/: advanced_generation.rs  comprehensive_test.rs  late_interaction.rs
src/: arena.rs  batch.rs  builder.rs  capabilities.rs  config.rs  context.rs  embedding.rs  error.rs  gpu_advanced.rs  grammar.rs  huggingface.rs  late_interaction.rs  lib.rs  memory.rs  memory_monitor.rs  model.rs  multimodal.rs  sampling.rs  sampling_simd.rs  speculative.rs  streaming.rs  structured_output.rs  sys.rs  token.rs
src/daemon/: anthropic.rs  client.rs  defaults.rs  hf.rs  mod.rs  models.rs  openai.rs  protocol.rs  server.rs  tui.rs
tests/: doc_tests.rs  error_tests.rs  huggingface_integration_tests.rs  integration_tests.rs  simple_test.rs  unit_tests.rs
ui/src/api/: client.ts
ui/src/views/: Models.vue
